// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputSnapshot should render normal TextInput 1`] = `
<div
  className="sc-gsnTZi hEqjwc"
>
  <input
    className="sc-bczRLJ gBziFm"
    onChange={[Function]}
    placeholder="placeholder"
    type="password"
  />
</div>
`;

exports[`TextInputSnapshot should render normal TextInput with left icon 1`] = `
<div
  className="sc-gsnTZi hEqjwc"
>
  <div
    className="sc-dkzDqf gZKilg"
  >
    <div />
  </div>
  <input
    className="sc-bczRLJ gBziFm"
    onChange={[Function]}
    placeholder="placeholder"
    type="password"
  />
</div>
`;
